--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,16 @@
 /node_modules
-/public/hot
-/public/storage
-/storage/
+/storage
 /routes
 /vendor
 /.idea
-/.vscode
-/.vagrant
-Homestead.json
-Homestead.yaml
-npm-debug.log
 yarn-error.log
 .env
 /.phpstorm.meta.php
 /_ide_helper.php
-/artisan
-/composer.json
-/package.json
 /composer.lock
-/phpunit.xml
 /yarn.lock
 /public
 /bootstrap/cache/
 /package-lock.json
-/resources/assets/fonts
-/resources/assets/js/components/tmp.vue
 /resources/emails/tmp
 /resources/emails/views
