--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "js-cookie": "^2.2.0",
         "pace": "^0.0.4",
         "popper.js": "^1.12.9",
+        "socket.io-client": "^2.1.1",
         "sweetalert2": "^7.3.5",
         "trumbowyg": "^2.10.0",
         "vform": "^0.8.1",
