--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,15 @@
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "laravolt/avatar": "^2.0",
         "mailgun/mailgun-php": "^2.5",
-        "mews/purifier": "^2.1",
+        "mews/purifier": "dev-master",
         "php-http/guzzle6-adapter": "^1.1",
         "predis/predis": "^1.1",
         "ramsey/uuid": "^3.7",
-        "tightenco/ziggy": "^0.6.0",
-        "tymon/jwt-auth": "^1.0.0-rc.2"
+        "tymon/jwt-auth": "^1.0.0-rc.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
