--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
         "sweetalert2": "^7.3.5",
         "trumbowyg": "^2.10.0",
         "vform": "^0.8.1",
-        "vue": "^2.5.13",
+        "vue": "^2.5.22",
         "vue-clipboard2": "^0.2.0",
         "vue-i18n": "^7.3.4",
+        "vue-js-modal": "^1.3.28",
         "vue-meta": "^1.4.2",
         "vue-router": "^3.0.1",
         "vue-svg-loader": "^0.5.0",
@@ -63,7 +64,7 @@
         "gulp-watch": "^5.0.0",
         "laravel-mix": "^2.0",
         "mjml": "^4.0.5",
-        "vue-template-compiler": "^2.5.13",
+        "vue-template-compiler": "^2.5.22",
         "vue2-admin-lte": "^0.4.3",
         "webpack-bundle-analyzer": "^2.9.2",
         "webpack-uglify-js-plugin": "^1.1.9"
