--- a/package.json
+++ b/package.json
@@ -16,42 +16,39 @@
         "prod-spa": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=webpack.frontend.blade.mix"
     },
     "dependencies": {
-        "@fortawesome/fontawesome": "^1.1.3",
-        "@fortawesome/fontawesome-free-brands": "^5.0.3",
-        "@fortawesome/fontawesome-free-regular": "^5.0.3",
-        "@fortawesome/fontawesome-free-solid": "^5.0.3",
-        "@fortawesome/vue-fontawesome": "^0.0.22",
-        "@tinymce/tinymce-vue": "^1.0.8",
-        "axios": "^0.17.1",
-        "bootstrap": "^4.0.0",
-        "bootstrap-vue": "^2.0.0-rc.1",
-        "cropperjs": "^1.4.0",
-        "jquery": "^3.2.1",
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-svg-core": "^1.2.12",
+        "@fortawesome/free-solid-svg-icons": "^5.6.3",
+        "@fortawesome/vue-fontawesome": "^0.1.5",
+        "axios": "^0.18.0",
+        "bootstrap": "^4.2.1",
+        "bootstrap-vue": "^2.0.0-rc.11",
+        "cropperjs": "^1.4.3",
+        "jquery": "^3.3.1",
         "js-cookie": "^2.2.0",
         "pace": "^0.0.4",
-        "popper.js": "^1.12.9",
-        "socket.io-client": "^2.1.1",
-        "sweetalert2": "^7.3.5",
-        "trumbowyg": "^2.10.0",
-        "vform": "^0.8.1",
+        "popper.js": "^1.14.6",
+        "socket.io-client": "^2.2.0",
+        "sweetalert2": "^8.0.1",
+        "trumbowyg": "^2.13.0",
+        "vform": "^1.0.0",
         "vue": "^2.5.22",
-        "vue-clipboard2": "^0.2.0",
-        "vue-i18n": "^7.3.4",
-        "vue-js-modal": "^1.3.28",
-        "vue-meta": "^1.4.2",
-        "vue-router": "^3.0.1",
-        "vue-svg-loader": "^0.5.0",
+        "vue-clipboard2": "^0.2.1",
+        "vue-i18n": "^8.7.0",
+        "vue-meta": "^1.5.8",
+        "vue-router": "^3.0.2",
+        "vue-svg-loader": "^0.11.0",
         "vue-transmit": "9.0.0-alpha.11",
-        "vuejs-datepicker": "^1.5.2",
-        "vuex": "^3.0.1",
+        "vuejs-datepicker": "^1.5.4",
+        "vuex": "^3.1.0",
         "vuex-router-sync": "^5.0.0"
     },
     "devDependencies": {
         "admin-lte": "^2.4.2",
         "babel-eslint": "^8.2.1",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "browser-sync": "^2.23.6",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "babel-plugin-syntax-dynamic-import": "^7.0.0-beta.3",
+        "browser-sync": "^2.26.3",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "clean-webpack-plugin": "^0.1.18",
         "cross-env": "^5.1",
         "dynamic-polyfill": "^1.0.1",
@@ -59,11 +56,14 @@
         "eslint": "^4.15.0",
         "eslint-plugin-vue-libs": "^2.1.0",
         "exports-loader": "^0.7.0",
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.0",
         "gulp-mjml": "^3.0.0",
-        "gulp-watch": "^5.0.0",
-        "laravel-mix": "^2.0",
-        "mjml": "^4.0.5",
+        "gulp-watch": "^5.0.1",
+        "mjml": "^4.3.1",
+        "laravel-mix": "^3.0.0",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.16.1",
+        "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.5.22",
         "vue2-admin-lte": "^0.4.3",
         "webpack-bundle-analyzer": "^2.9.2",
