--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap": "^4.2.1",
         "bootstrap-vue": "^2.0.0-rc.11",
         "cropperjs": "^1.4.3",
+        "dayjs": "^1.8.0",
         "jquery": "^3.3.1",
         "js-cookie": "^2.2.0",
         "pace": "^0.0.4",
@@ -59,8 +60,8 @@
         "gulp": "^4.0.0",
         "gulp-mjml": "^3.0.0",
         "gulp-watch": "^5.0.1",
-        "mjml": "^4.3.1",
         "laravel-mix": "^3.0.0",
+        "mjml": "^4.3.1",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.16.1",
         "sass-loader": "^7.1.0",
