--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "bogardo/mailgun": "^5.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "^4.0",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~1.1",
         "php-ds/php-ds": "^1.2",
