--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cropperjs": "^1.4.3",
     "dayjs": "^1.8.0",
     "jquery": "^3.3.1",
+    "jquery-validation": "^1.19.0",
     "js-cookie": "^2.2.0",
     "pace": "^0.0.4",
     "popper.js": "^1.14.6",
