--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,8 @@ JWT_TTL=
 JWT_SECRET=
 
 MAILGUN_DOMAIN=
-MAILGUN_SECRET=
+MAILGUN_PRIVATE_KEY=
+MAILGUN_PUBLIC_KEY=
 
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
