--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "laravolt/avatar": "^2.0",
-        "mailgun/mailgun-php": "^2.5",
+        "mailgun/mailgun-php": "^2.8.1",
+        "php-http/message": "^1.7.2",
         "mews/purifier": "^2.1",
         "php-http/guzzle6-adapter": "^1.1",
         "ramsey/uuid": "^3.7",
@@ -20,7 +21,6 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "^2.4",
-        "bogardo/mailgun": "^5.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "laravel/dusk": "^4.0",
