--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ MAILGUN_PUBLIC_KEY=
 
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
+
+MAIN_ACCOUNT_FIRST_NAME=
+MAIN_ACCOUNT_LAST_NAME=
+MAIN_ACCOUNT_USERNAME=
+MAIN_ACCOUNT_EMAIL=
