--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.0",
     "js-cookie": "^2.2.0",
+    "laravel-echo": "^1.5.3",
+    "laravel-echo-server": "^1.5.0",
     "pace": "^0.0.4",
     "popper.js": "^1.14.6",
+    "pusher-js": "^4.4.0",
     "socket.io-client": "^2.2.0",
     "sweetalert2": "^8.0.1",
     "trumbowyg": "^2.13.0",
