--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "laravel/dusk": "^4.0",
+        "league/csv": "^9.1",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~1.1",
         "php-ds/php-ds": "^1.2",
