--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "cyrildewit/eloquent-viewable": "^3.1",
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "laravolt/avatar": "^2.0",
         "mailgun/mailgun-php": "^2.8.1",
-        "php-http/message": "^1.7.2",
         "mews/purifier": "^2.1",
         "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.7.2",
         "ramsey/uuid": "^3.7",
         "tymon/jwt-auth": "^1.0.0-rc.3"
     },
