--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/message": "^1.7.2",
         "ramsey/uuid": "^3.7",
+        "suin/php-rss-writer": "^1.6",
         "tymon/jwt-auth": "^1.0.0-rc.3"
     },
     "require-dev": {
