--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
+        "laravel/socialite": "^4.1",
         "laravel/tinker": "~1.0",
         "laravolt/avatar": "^2.2",
         "mailgun/mailgun-php": "^2.8.1",
