--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "cyrildewit/eloquent-viewable": "^3.1",
         "fideloper/proxy": "~4.0",
+        "google/apiclient": "^2.2",
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.1",
