--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "fideloper/proxy": "~4.0",
         "google/apiclient": "^2.2",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "~1.0",
         "laravolt/avatar": "^2.2",
@@ -20,7 +20,8 @@
         "php-http/message": "^1.7.2",
         "ramsey/uuid": "^3.8",
         "suin/php-rss-writer": "^1.6",
-        "tymon/jwt-auth": "^1.0.0-rc.3"
+        "tymon/jwt-auth": "^1.0.0-rc.3",
+        "pda/pheanstalk": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
