--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "cyrildewit/eloquent-viewable": "^3.1",
+        "cyrildewit/eloquent-viewable": "^3.2",
         "fideloper/proxy": "~4.0",
         "google/apiclient": "^2.2",
         "intervention/image": "^2.4",
@@ -20,7 +20,7 @@
         "php-http/message": "^1.7.2",
         "ramsey/uuid": "^3.8",
         "suin/php-rss-writer": "^1.6",
-        "tymon/jwt-auth": "^1.0.0-rc.3",
+        "tymon/jwt-auth": "dev-develop#34d8e48 as 1.0.0-rc.3.2",
         "pda/pheanstalk": "^4.0"
     },
     "require-dev": {
@@ -31,7 +31,7 @@
         "laravel/dusk": "^4.0",
         "league/csv": "^9.1",
         "mockery/mockery": "~1.2",
-        "nunomaduro/collision": "~1.1",
+        "nunomaduro/collision": "~2.1",
         "php-ds/php-ds": "^1.2",
         "phpunit/phpunit": "~7.5",
         "rap2hpoutre/laravel-log-viewer": "^1.0",
