--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "cyrildewit/eloquent-viewable": "^3.2",
+        "elasticsearch/elasticsearch": "^6.1",
         "fideloper/proxy": "~4.0",
         "google/apiclient": "^2.2",
         "intervention/image": "^2.4",
@@ -16,12 +17,13 @@
         "laravolt/avatar": "^2.2",
         "mailgun/mailgun-php": "^2.8.1",
         "mews/purifier": "^2.1",
+        "ongr/elasticsearch-dsl": "^6.0",
+        "pda/pheanstalk": "^4.0",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/message": "^1.7.2",
         "ramsey/uuid": "^3.8",
         "suin/php-rss-writer": "^1.6",
-        "tymon/jwt-auth": "dev-develop#34d8e48 as 1.0.0-rc.3.2",
-        "pda/pheanstalk": "^4.0"
+        "tymon/jwt-auth": "dev-develop#34d8e48 as 1.0.0-rc.3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
