--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Naraki\\Blog\\": "naraki/blog/src/"
         },
         "files": [
             "app/Support/helpers.php"
