--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "php-http/message": "^1.7.2",
         "ramsey/uuid": "^3.8",
         "suin/php-rss-writer": "^1.6",
-        "tymon/jwt-auth": "1.0.0-rc.4",
-        "naraki/elasticsearch": "dev-master#a14b1da as 0.1.0"
+        "tymon/jwt-auth": "1.0.0-rc.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
@@ -36,7 +35,8 @@
         "php-ds/php-ds": "^1.2",
         "phpunit/phpunit": "~7.5",
         "rap2hpoutre/laravel-log-viewer": "^1.0",
-        "symfony/thanks": "^1.1"
+        "symfony/thanks": "^1.1",
+        "naraki/elasticsearch": "dev-master#c3de52e as 0.1.0"
     },
     "autoload": {
         "classmap": [
@@ -46,7 +46,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "Naraki\\Blog\\": "naraki/blog/src/"
+            "Naraki\\Blog\\": "naraki/blog/src/",
+            "Naraki\\Rss\\": "naraki/rss/src/"
         },
         "files": [
             "app/Support/helpers.php"
