--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cropperjs": "^1.4.3",
     "dayjs": "^1.8.0",
+    "fuse.js": "^3.4.4",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "laravel-echo": "^1.5.3",
@@ -31,6 +32,9 @@
     "pusher-js": "^4.4.0",
     "socket.io-client": "^2.2.0",
     "sweetalert2": "^8.0.1",
+    "tippy.js": "^4.2.0",
+    "tiptap": "^1.14.0",
+    "tiptap-extensions": "^1.14.0",
     "trumbowyg": "^2.13.0",
     "vue": "^2.6.2",
     "vue-clipboard2": "^0.2.1",
