--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
 APP_NAME=
 APP_ENV=
+APP_OLD_ASS_RDBMS=
 APP_KEY=
 APP_DEBUG=
 APP_URL=
 APP_EMAIL=
+APP_LOGO_FILENAME=
+APP_HTTPS_ON=
+
+ELASTIC_SEARCH_ENABLED=
+ELASTIC_SEARCH_HOST=
+ELASTIC_SEARCH_URL=
 
 LOG_CHANNEL=
 ROOT_PASSWORD=
@@ -16,6 +23,7 @@ DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=
+BROADCAST_REDIS_DB=
 CACHE_DRIVER=
 SESSION_DRIVER=
 QUEUE_DRIVER=
@@ -23,6 +31,14 @@ QUEUE_DRIVER=
 REDIS_HOST=
 REDIS_PASSWORD=
 REDIS_PORT=
+
+ECHO_SERVER_HOST=
+MIX_ECHO_SERVER_HOST=
+MIX_ECHO_SERVER_PORT=
+ECHO_SERVER_PORT=
+ECHO_SERVER_AUTH_HOST=
+ECHO_SERVER_DEV_MODE=
+ECHO_SERVER_PROTOCOL=
 
 MAIL_DRIVER=
 MAIL_HOST=
@@ -33,17 +49,23 @@ MAIL_ENCRYPTION=
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
 
-SESSION_LIFETIME=
-JWT_TTL=
-
 JWT_SECRET=
 
 MAILGUN_DOMAIN=
 MAILGUN_PRIVATE_KEY=
 MAILGUN_PUBLIC_KEY=
+MAILGUN_TESTMODE=
 
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
+
+OAUTH_GOOGLE_CLIENT_ID=
+OAUTH_GOOGLE_CLIENT_SECRET=
+OAUTH_GOOGLE_REDIRECT_URL=
+
+OAUTH_TWITTER_CLIENT_ID=
+OAUTH_TWITTER_CLIENT_SECRET=
+OAUTH_TWITTER_REDIRECT_URL=
 
 MAIN_ACCOUNT_FIRST_NAME=
 MAIN_ACCOUNT_LAST_NAME=
