--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
             "Naraki\\Mail\\": "naraki/mail/src/",
             "Naraki\\Sitemap\\": "naraki/sitemap/src/",
             "Naraki\\Forum\\": "naraki/forum/src/",
-            "Naraki\\Permission\\": "naraki/permission/src/"
+            "Naraki\\Permission\\": "naraki/permission/src/",
+            "Naraki\\Oauth\\": "naraki/oauth/src/"
         },
         "files": [
             "app/Support/helpers.php"
