--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,10 @@
         }
     },
     "scripts": {
+      "post-install-cmd": [
+        "@php artisan key:generate",
+        "@php artisan app:directories"
+      ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
